@@ -1,5 +1,5 @@
 .env
-.idea/
+.idea
 .php_cs.cache
 composer.lock
 node_modules/
